--- a/2021-05-22/src/package.json
+++ b/2021-05-22/src/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@slidev/cli": "^0.13.1",
-    "@slidev/theme-default": "^0.7.4"
+    "@slidev/theme-default": "^0.7.4",
+    "naive-ui": "^2.12.0",
+    "vue-tree-chart": "^1.2.9"
   },
   "devDependencies": {
     "@slidev/types": "^0.13.1",
