--- a/2021-06-19/src/package.json
+++ b/2021-06-19/src/package.json
@@ -9,7 +9,8 @@
     "@slidev/cli": "^0.13.1",
     "@slidev/theme-default": "^0.7.4",
     "naive-ui": "^2.12.0",
-    "vue-tree-chart": "^1.2.9"
+    "vue-draggable-next": "^2.0.1",
+    "vue3-draggable": "2.0.9"
   },
   "devDependencies": {
     "@slidev/types": "^0.13.1",
